# plasma-systemmonitor

./: .contextProperties.ini  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  ExtraDesktop.sh  Messages.sh  README.md  kcm_external_plasma-systemmonitor.desktop  logo.png.license  org.kde.plasma-systemmonitor.desktop  org.kde.plasma-systemmonitor.metainfo.xml
.reuse/: dep5
LICENSES/: CC0-1.0.txt
autotests/: CMakeLists.txt  TestPageManager.cpp
autotests/data/global/: basepage.page  newtestpage.page  old-basepage.page  oldtestpage.page  replacepage.page
autotests/data/local/: basepage.page  localpage.page  replacepage.page
cmake/: FindKSystemStats.cmake
kconf_update/: plasma-systemmonitor-replace-vmpss.py  plasma-systemmonitor.upd
po/ar/: ksysguard_face_org.kde.ksysguard.applicationstable.po  ksysguard_face_org.kde.ksysguard.processtable.po  plasma-systemmonitor.po
po/ast/: ksysguard_face_org.kde.ksysguard.applicationstable.po  ksysguard_face_org.kde.ksysguard.processtable.po  plasma-systemmonitor.po
po/az/: ksysguard_face_org.kde.ksysguard.applicationstable.po  ksysguard_face_org.kde.ksysguard.processtable.po  plasma-systemmonitor.po
po/be/: ksysguard_face_org.kde.ksysguard.applicationstable.po  ksysguard_face_org.kde.ksysguard.processtable.po  plasma-systemmonitor.po
po/bg/: ksysguard_face_org.kde.ksysguard.applicationstable.po  ksysguard_face_org.kde.ksysguard.processtable.po  plasma-systemmonitor.po
po/ca/: ksysguard_face_org.kde.ksysguard.applicationstable.po  ksysguard_face_org.kde.ksysguard.processtable.po  plasma-systemmonitor.po
po/ca@valencia/: ksysguard_face_org.kde.ksysguard.applicationstable.po  ksysguard_face_org.kde.ksysguard.processtable.po  plasma-systemmonitor.po
po/cs/: ksysguard_face_org.kde.ksysguard.applicationstable.po  ksysguard_face_org.kde.ksysguard.processtable.po  plasma-systemmonitor.po
po/da/: ksysguard_face_org.kde.ksysguard.applicationstable.po  ksysguard_face_org.kde.ksysguard.processtable.po  plasma-systemmonitor.po
po/de/: ksysguard_face_org.kde.ksysguard.applicationstable.po  ksysguard_face_org.kde.ksysguard.processtable.po  plasma-systemmonitor.po
po/en_GB/: ksysguard_face_org.kde.ksysguard.applicationstable.po  ksysguard_face_org.kde.ksysguard.processtable.po  plasma-systemmonitor.po
po/eo/: ksysguard_face_org.kde.ksysguard.applicationstable.po  ksysguard_face_org.kde.ksysguard.processtable.po  plasma-systemmonitor.po
po/es/: ksysguard_face_org.kde.ksysguard.applicationstable.po  ksysguard_face_org.kde.ksysguard.processtable.po  plasma-systemmonitor.po
po/eu/: ksysguard_face_org.kde.ksysguard.applicationstable.po  ksysguard_face_org.kde.ksysguard.processtable.po  plasma-systemmonitor.po
src/: AboutPage.qml  CMakeLists.txt  ColumnDisplayModel.cpp  CommandLineArguments.cpp  CommandLineArguments.h  ComponentCacheProxyModel.cpp  Config.kcfgc  Configuration.cpp  Configuration.h  GlobalMenu.qml  Main.qml  ToolsModel.cpp  ToolsModel.h  ksysguardqml.kcfg  ksysguardqml.qrc  main.cpp  main.qml  org.kde.ksysguardqml.desktop  org.kde.plasma-systemmonitor.desktop  org.kde.systemmonitor.desktop  plasma-systemmonitor.knsrc  systemmonitor.kcfg  systemmonitor.kcfgc  systemmonitor.qrc
src/components/: ApplicationDetails.qml  ApplicationInformation.qml  Header.qml  KillDialog.qml  Legend.qml  LineChartCard.qml  NetworkDetails.qml  OverviewCard.qml  SensorLabel.qml  StyledGroupBox.qml  UsedTotalDisplay.qml
src/components/table/: ApplicationsTableView.qml  ColumnConfigurationDialog.qml  FirstCellDelegate.qml  LineChartCellDelegate.qml  ProcessesTableView.qml  TableViewHeader.qml  UserCellDelegate.qml
src/faces/: CMakeLists.txt
src/faces/applicationstable/: Messages.sh  metadata.desktop  metadata.json
src/faces/applicationstable/contents/: faceproperties
src/faces/applicationstable/contents/config/: main.xml
src/faces/applicationstable/contents/ui/: ApplicationDetails.qml  ApplicationInformation.qml  ApplicationsTableView.qml  CompactRepresentation.qml  Config.qml  FullRepresentation.qml  LineChartCard.qml
src/faces/processtable/: Messages.sh  metadata.desktop  metadata.json
src/faces/processtable/contents/: faceproperties
src/faces/processtable/contents/config/: main.xml
src/faces/processtable/contents/ui/: CompactRepresentation.qml  Config.qml  FullRepresentation.qml  ProcessTableView.qml
src/page/: CMakeLists.txt  Choices.qml  ColumnControl.qml  ConditionalLoader.qml  Container.qml  ContainerDragHandler.qml  DialogLoader.qml  EditablePage.qml  EditablePageAction.qml  EditorToolBar.qml  FaceConfigurationPage.qml  FaceControl.qml  FaceLoader.cpp  FaceLoader.h  FacesModel.cpp  FacesModel.h  LoadPresetDialog.qml  MissingSensorsDialog.qml  MoveAction.qml  MoveButton.qml  PageContents.qml  PageController.cpp  PageController.h  PageDataModel.cpp  PageDataModel.h  PageDataObject.cpp  PageDataObject.h  PageDialog.qml  PageEditor.qml  PageManager.cpp  PageManager.h  PageManager_p.h  PagePlugin.cpp  PagePlugin.h  PageSortDialog.qml  PageSortModel.cpp  PageSortModel.h  PagesModel.cpp  PagesModel.h  PlaceholderRectangle.qml  (+6 more)
src/pages/: AboutPage.qml  ApplicationsTablePage.qml  HistoryPage.qml  OverviewPage.qml  ProcessTablePage.qml  SettingsPage.qml  applications.page  graphics.page  history.page  old-history.page  old-overview.page  overview.page  processes.page
src/table/: AffinityDialog.qml  BaseCellDelegate.qml  BaseTableView.qml  BasicCellDelegate.qml  CMakeLists.txt  CellBackground.qml  ColumnConfigurationDialog.qml  ColumnDisplayModel.cpp  ColumnDisplayModel.h  ColumnSortFilterDisplayModel.cpp  ColumnSortFilterDisplayModel.h  ColumnSortModel.cpp  ColumnSortModel.h  ComponentCacheProxyModel.cpp  ComponentCacheProxyModel.h  FirstCellDelegate.qml  KillDialog.qml  LineChartCellDelegate.qml  ProcessCellDelegate.qml  ProcessSortFilterModel.cpp  ProcessSortFilterModel.h  ReniceDialog.qml  ReverseColumnsProxyModel.cpp  ReverseColumnsProxyModel.h  TablePlugin.cpp  TablePlugin.h  TableViewHeader.qml  TextCellDelegate.qml  TreeDecoration.qml  UserCellDelegate.qml  UserMode.qml  qmldir
(+103 files in other folders)
